Fix to avoid overflow in footer's mobile version

--- a/client/components/Footer/footer.scss
+++ b/client/components/Footer/footer.scss
@@ -128,25 +128,55 @@
 	.footer-component {
 		text-align: center;
 		font-size: 18px;
+		.container {
+			width: 85%;
+		}
 		.col-12 {
 			display: flex;
 			flex-direction: column-reverse;
-		}
-		.left .title {
-			flex-direction: column;
-			a {
-				margin-bottom: 1em;
+			.left .title {
+				flex-direction: column;
+				a {
+					margin-bottom: 1em;
+				}
+			}
+			.left {
+				form {
+					margin-top: 10px;
+				}
+			}
+			.right {
+				border-bottom: 1px solid white;
+				text-align: center;
+				margin-bottom: 0em;
+				padding-bottom: 2em;
+				.social-list {
+					li {
+						margin: 0em 0.5em;
+					}
+				}
 			}
 		}
-		.right {
-			border-bottom: 1px solid white;
-			text-align: center;
-			margin-bottom: 2em;
-			padding-bottom: 2em;
-		}
-		.social-list {
-			li {
-				margin: 0em 0.5em;
+		.built-on {
+			width: 75%;
+			padding: 0.8em;
+			top: 1.5em;
+			a {
+				font-size: 0.8em;
+				&:hover {
+					opacity: 1;
+					&:before {
+						content: '✨';
+						padding-right: 0.3em;
+					}
+					&:after {
+						content: '✨';
+						padding-left: 0.3em;
+					}
+				}
+				img {
+					height: 14px;
+				}
 			}
 		}
 	}
